<resources>
    <string name="app_name">都易帮抢单</string>
    <string name="password_login">密码登陆</string>
    <string name="login_name_phone">请输入11位手机号码</string>
    <string name="login_password">请输入密码</string>
    <string name="login_code">请输入验证码</string>
    <string name="invitation_code">请输入邀请码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login_button">登   录</string>
    <string name="register_hint">还没有账号？</string>
    <string name="register_entrance">注册账号</string>
    <string name="get_code">获取验证码</string>
    <string name="forget_bar">忘记密码</string>
    <string name="register_bar">申请快递员</string>
    <string name="new_password">请输入新密码</string>
    <string name="notarize_password">确认密码</string>
    <string name="recover">完成</string>
    <string name="name">姓名</string>
    <string name="name_hint">请输入您的姓名</string>
    <string name="phone">手机号</string>
    <string name="phone_hint">请输入您的手机号码</string>
    <string name="location">所在地</string>
    <string name="location_hint">请输入您的地址</string>
    <string name="remark">备注</string>
    <string name="remark_hint">请输入备注信息（选填）</string>
    <string name="photo_text_front">证件正面照</string>
    <string name="photo_text_contrary">证件反面照</string>
    <string name="photo_text_hand">手持正面照</string>
    <string name="photo_hint">温馨提示：请您在上传照片时确保五官，证件内容清晰可见</string>
    <string name="commit">提交</string>
    <string name="register_hint1">点击提交表示已了解</string>
    <string name="register_hint1_content">我已阅读并同意都易帮条款和协议</string>
    <string name="grab_single">抢单</string>
    <string name="my_indent">我的订单</string>
    <string name="join">我要加入</string>
    <string name="share">分享赚钱</string>
    <string name="mine">我的</string>
    <string name="sharestate">分享赚钱的说明，好处</string>
    <string name="refresh_more_end">没有新的订单了！</string>
    <string name="load_more_error">加载时发生错误-_-!</string>
    <string name="load_more_empty">你没有接过该类订单</string>
    <string name="load_more_end">没有更多数据</string>
</resources>
