<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.paopao.roblistapp.main.MainActivity">

    <include
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grab_single"
            style="@style/BottomText"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/grab_single" />

        <TextView
            android:id="@+id/my_indent"
            style="@style/BottomText"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/my_indent" />

        <TextView
            android:id="@+id/share"
            style="@style/BottomText"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/share" />

        <TextView
            android:id="@+id/mine"
            style="@style/BottomText"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/mine" />
    </LinearLayout>
</LinearLayout>
