<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_toolbar"
                android:background="@color/white"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    style="@style/LoginText"
                    android:layout_weight="1"
                    android:hint="@string/name_hint" />

                <RelativeLayout
                    android:id="@+id/rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/getcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/tx_right_margin"
                        android:text="获取验证码"
                        android:textColor="@color/gray"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/division"
                        android:layout_width="2dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/tx_right_margin"
                        android:layout_toLeftOf="@id/getcode"
                        android:background="@color/gray" />

                    <EditText
                        android:id="@+id/phone_number"
                        style="@style/LoginText"
                        android:layout_toLeftOf="@id/division"
                        android:hint="@string/login_name_phone" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/register_code"
                    style="@style/LoginText"
                    android:layout_below="@+id/rl"
                    android:hint="@string/login_code" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_front"
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:src="@mipmap/front" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/photo_text_front"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_contrary"
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:src="@mipmap/reverse_side" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/photo_text_contrary"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/tv_hand_photo"
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:src="@mipmap/hand_card" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/photo_text_hand"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/photo_hint"
                    android:textSize="10sp" />
            </LinearLayout>
            <Button
                android:id="@+id/button"
                style="@style/LoginButton"
                android:layout_gravity="center_horizontal"
                android:text="@string/commit" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>